--- a/HW2.ipynb
+++ b/HW2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c7128099",
+   "id": "b289e70e",
    "metadata": {},
    "source": [
     "# 我的課程查詢器\n",
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 309,
-   "id": "bdab4a06",
+   "id": "f24422bd",
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 310,
-   "id": "03864be3",
+   "id": "45a5730c",
    "metadata": {},
    "outputs": [
     {
@@ -115,17 +115,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
-   "id": "feaccf32",
+   "execution_count": 317,
+   "id": "53f7863a",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "中文閱讀與思辯\n",
-      "中文寫作與表達\n",
-      "體育\n"
+      "課程名稱： 中文閱讀與思辯 完成時間： 110上\n",
+      "課程名稱： 中文寫作與表達 完成時間： 110下\n",
+      "課程名稱： 體育 完成時間： None\n"
      ]
     }
    ],
@@ -143,7 +143,10 @@
     "        for u in sublist:\n",
     "            if sub == sublist[r]:\n",
     "                for o in data[n].get(schlist[n])[r].get(sublist[r]):\n",
-    "                    print(data[n].get(schlist[n])[r].get(sublist[r])[p].get('課程名稱'))\n",
+    "                    # print(data[n].get(schlist[n])[r].get(sublist[r])[p].get('完成時間'))\n",
+    "                    time = data[n].get(schlist[n])[r].get(sublist[r])[p].get('完成時間')\n",
+    "                    lesson = data[n].get(schlist[n])[r].get(sublist[r])[p].get('課程名稱')\n",
+    "                    print(\"課程名稱：\",lesson,\"完成時間：\",time)\n",
     "                    p = p + 1\n",
     "                r = r + 1\n",
     "            else:\n",
@@ -156,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": 312,
-   "id": "35b5d544",
+   "id": "958033b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 313,
-   "id": "9f9af708",
+   "id": "e06b2f82",
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +209,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5498eb8f",
+   "id": "ea4d23d8",
    "metadata": {},
    "outputs": [],
    "source": []
