課程查詢完成

--- a/HW2.ipynb
+++ b/HW2.ipynb
@@ -7,12 +7,14 @@
    "source": [
     "# 我的課程查詢器\n",
     "## 原由\n",
-    "由於我曾經在學重考，因此有雙重學籍的問題。一開始有想過兩邊學校同時一起讀，所以兩間學校的畢業學分甚麼該修、甚麼已經完成，這些資料一度使我非常混亂"
+    "由於我曾經在學重考，因此有雙重學籍的問題。一開始有想過兩邊學校同時一起讀，所以兩間學校的畢業學分甚麼該修、甚麼已經完成，這些資料一度使我非常混亂。\n",
+    "所以我將兩間學校所有需要修習的科目依照年級、必選修、以及完成時間做出json檔。希望可以做出可以查詢各年級科目和是否完成，與剩餘多少學分。\n",
+    "目前只完成查詢年級各科目的部分。"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 2,
    "id": "582b491f",
    "metadata": {},
    "outputs": [],
@@ -22,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 3,
    "id": "a59972df",
    "metadata": {},
    "outputs": [],
@@ -32,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 4,
    "id": "f8165223",
    "metadata": {},
    "outputs": [],
@@ -42,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 5,
    "id": "15808851",
    "metadata": {},
    "outputs": [
@@ -52,7 +54,7 @@
        "dict"
       ]
      },
-     "execution_count": 307,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 6,
    "id": "8bc27a66",
    "metadata": {},
    "outputs": [],
@@ -73,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 7,
    "id": "f24422bd",
    "metadata": {},
    "outputs": [
@@ -83,7 +85,7 @@
        "list"
       ]
      },
-     "execution_count": 309,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,19 +96,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": null,
    "id": "45a5730c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "輸入師大或實踐師大\n",
-      "輸入課程性質校共同必修\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 輸入變數\n",
     "sch = input(\"輸入師大或實踐\")\n",
@@ -115,20 +108,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": null,
    "id": "53f7863a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "課程名稱： 中文閱讀與思辯 完成時間： 110上\n",
-      "課程名稱： 中文寫作與表達 完成時間： 110下\n",
-      "課程名稱： 體育 完成時間： None\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 設定計數器數值\n",
     "schlist = [\"師大\",\"實踐\"]\n",
@@ -158,7 +141,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": null,
+   "id": "6368b359",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 輸入變數\n",
+    "sch = input(\"輸入師大或實踐\")\n",
+    "sub = input(\"輸入課程性質\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "958033b9",
    "metadata": {},
    "outputs": [],
@@ -188,22 +183,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": null,
    "id": "e06b2f82",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "課程名稱： 中文閱讀與思辯\n",
-      "課程名稱： 中文寫作與表達\n",
-      "課程名稱： 體育\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "lesson(sch,sub)"
+    "lesson(sch,sub) "
    ]
   },
   {
