--- a/HW2.ipynb
+++ b/HW2.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "582b491f",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "a59972df",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "f8165223",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "15808851",
    "metadata": {},
    "outputs": [
@@ -54,7 +54,7 @@
        "dict"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "8bc27a66",
    "metadata": {},
    "outputs": [],
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "f24422bd",
    "metadata": {},
    "outputs": [
@@ -85,7 +85,7 @@
        "list"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,10 +96,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "45a5730c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "輸入師大或實踐師大\n",
+      "輸入課程性質大一必修\n"
+     ]
+    }
+   ],
    "source": [
     "# 輸入變數\n",
     "sch = input(\"輸入師大或實踐\")\n",
@@ -108,10 +117,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "53f7863a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "課程名稱： 電腦影像處理 完成時間： 110上\n",
+      "課程名稱： 計算機概論 完成時間： None\n",
+      "課程名稱： 人力資源發展概論 完成時間： None\n",
+      "課程名稱： 基本設計 完成時間： None\n",
+      "課程名稱： 電子電路 完成時間： None\n",
+      "課程名稱： 人力資源管理 完成時間： None\n"
+     ]
+    }
+   ],
    "source": [
     "# 設定計數器數值\n",
     "schlist = [\"師大\",\"實踐\"]\n",
@@ -141,10 +163,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "6368b359",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "輸入師大或實踐實踐\n",
+      "輸入課程性質大二必修\n"
+     ]
+    }
+   ],
    "source": [
     "# 輸入變數\n",
     "sch = input(\"輸入師大或實踐\")\n",
@@ -153,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "958033b9",
    "metadata": {},
    "outputs": [],
@@ -183,10 +214,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "e06b2f82",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "課程名稱： 電腦輔助設計(一)\n",
+      "課程名稱： 電腦輔助設計(二)\n",
+      "課程名稱： 跨域平台整合設計\n",
+      "課程名稱： 後置特效處裡\n",
+      "課程名稱： 專業英語聽講\n",
+      "課程名稱： 媒體整合設計(一)\n",
+      "課程名稱： 媒體設計史(一)\n",
+      "課程名稱： 專業英語導讀\n",
+      "課程名稱： 媒體整合設計(二)\n",
+      "課程名稱： 媒體設計史(二)\n"
+     ]
+    }
+   ],
    "source": [
     "lesson(sch,sub) "
    ]
