--- a/HW2.ipynb
+++ b/HW2.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "582b491f",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "a59972df",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "f8165223",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "15808851",
    "metadata": {},
    "outputs": [
@@ -54,7 +54,7 @@
        "dict"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "8bc27a66",
    "metadata": {},
    "outputs": [],
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "f24422bd",
    "metadata": {},
    "outputs": [
@@ -85,7 +85,7 @@
        "list"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "id": "45a5730c",
    "metadata": {},
    "outputs": [
@@ -104,20 +104,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "輸入師大或實踐師大\n",
-      "輸入課程性質大一必修\n"
+      "輸入學校: 師大\n",
+      "輸入課程性質: 大一必修\n"
      ]
     }
    ],
    "source": [
     "# 輸入變數\n",
     "sch = input(\"輸入師大或實踐\")\n",
-    "sub = input(\"輸入課程性質\")"
+    "sub = input(\"輸入課程性質\")\n",
+    "print(\"輸入學校:\",sch)\n",
+    "print(\"輸入課程性質:\",sub)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "id": "53f7863a",
    "metadata": {},
    "outputs": [
@@ -163,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "id": "6368b359",
    "metadata": {},
    "outputs": [
@@ -171,20 +173,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "輸入師大或實踐實踐\n",
-      "輸入課程性質大二必修\n"
+      "輸入學校: 師大\n",
+      "輸入課程性質: 大四必修\n"
      ]
     }
    ],
    "source": [
     "# 輸入變數\n",
     "sch = input(\"輸入師大或實踐\")\n",
-    "sub = input(\"輸入課程性質\")"
+    "sub = input(\"輸入課程性質\")\n",
+    "print(\"輸入學校:\",sch)\n",
+    "print(\"輸入課程性質:\",sub)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "id": "958033b9",
    "metadata": {},
    "outputs": [],
@@ -214,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "id": "e06b2f82",
    "metadata": {},
    "outputs": [
@@ -222,16 +226,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "課程名稱： 電腦輔助設計(一)\n",
-      "課程名稱： 電腦輔助設計(二)\n",
-      "課程名稱： 跨域平台整合設計\n",
-      "課程名稱： 後置特效處裡\n",
-      "課程名稱： 專業英語聽講\n",
-      "課程名稱： 媒體整合設計(一)\n",
-      "課程名稱： 媒體設計史(一)\n",
-      "課程名稱： 專業英語導讀\n",
-      "課程名稱： 媒體整合設計(二)\n",
-      "課程名稱： 媒體設計史(二)\n"
+      "課程名稱： 專題製作（二）\n"
      ]
     }
    ],
@@ -250,7 +245,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -264,7 +259,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "369f2c481f4da34e4445cda3fffd2e751bd1c4d706f27375911949ba6bb62e1c"
+   }
   }
  },
  "nbformat": 4,
