--- a/HW2.ipynb
+++ b/HW2.ipynb
@@ -24,10 +24,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "id": "a59972df",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<_io.TextIOWrapper name='school.json' mode='r' encoding='utf-8'>\n"
+     ]
+    }
+   ],
    "source": [
     "n = open(\"school.json\", encoding=\"utf-8\")##打開資料，並調整編成碼"
    ]
@@ -473,7 +481,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.10.7 (tags/v3.10.7:6cc6b13, Sep  5 2022, 14:08:36) [MSC v.1933 64 bit (AMD64)]"
   },
   "vscode": {
    "interpreter": {
