--- a/HW3.ipynb
+++ b/HW3.ipynb
@@ -1433,7 +1433,7 @@
     "url = \"https://minniejplyrics.wordpress.com/\"\n",
     "with req.urlopen(url) as response:\n",
     "    data = response.read().decode(\"utf-8\")\n",
-    "print(data) #(備註:並無出現教學影片中的連線錯誤問題，所以沒再加request headers)"
+    "#print(data) #(備註:並無出現教學影片中的連線錯誤問題，所以沒再加request headers)"
    ]
   },
   {
@@ -2832,7 +2832,7 @@
     "url = home.find(\"li\",class_= groupcode).a[\"href\"]#find new url and updata\n",
     "with req.urlopen(url) as response:\n",
     "    data = response.read().decode(\"utf-8\")\n",
-    "print(data)"
+    "#print(data)"
    ]
   },
   {
@@ -4244,7 +4244,7 @@
     "url = song_link#find new url and updata\n",
     "with req.urlopen(url) as response:\n",
     "    data = response.read().decode(\"utf-8\")\n",
-    "print(data)"
+    "#print(data)"
    ]
   },
   {
