--- a/HW3.ipynb
+++ b/HW3.ipynb
@@ -665,13 +665,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "(pd.DataFrame.from_dict(data=groups_dict, orient='index')\n",
-    "   .to_csv('Data.csv', header=False))"
+    "   .to_csv('Data.csv', header=0))"
    ]
   },
   {
