--- a/HW3.ipynb
+++ b/HW3.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
        " '【中文歌詞翻譯】なにわ男子「Timeless Love」']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
        " 'Snow Man']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,14 +221,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "輸入團體名稱(なにわ男子、ジャニーズWEST、Hey! Say! JUMP、King & Prince、SEVENTEEN、Snow Man)SEVENTEEN\n"
+      "輸入團體名稱(なにわ男子、ジャニーズWEST、Hey! Say! JUMP、King & Prince、SEVENTEEN、Snow Man)なにわ男子\n"
      ]
     }
    ],
@@ -238,15 +238,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SEVENTEEN\n",
-      "cat-item cat-item-92515\n"
+      "なにわ男子\n",
+      "cat-item cat-item-651000862\n"
      ]
     }
    ],
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,14 +276,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SEVENTEEN – 櫻色落日\n"
+      "なにわ男子 – 櫻色落日\n"
      ]
     }
    ],
@@ -303,25 +303,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 436,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['「あいのちから」']]\n"
+      "[['「ボクとキミと」'], ['「僕に大切にされてね。」'], ['「オレンジkiss」'], ['「ブラザービート」'], ['「D.D.」'], ['「Christmas wishes」'], ['「HELLO HELLO」'], ['「Secret Touch」']]\n",
+      "[<h2 class=\"entry-title\"><a href=\"https://minniejplyrics.wordpress.com/2022/09/02/%e3%80%90%e4%b8%ad%e6%96%87%e6%ad%8c%e8%a9%9e%e7%bf%bb%e8%ad%af%e3%80%91snow-man%e3%80%8c%e3%83%9c%e3%82%af%e3%81%a8%e3%82%ad%e3%83%9f%e3%81%a8%e3%80%8d/\" rel=\"bookmark\">【中文歌詞翻譯】Snow Man「ボクとキミと」</a></h2>, <h2 class=\"entry-title\"><a href=\"https://minniejplyrics.wordpress.com/2022/07/28/%e3%80%90%e4%b8%ad%e6%96%87%e6%ad%8c%e8%a9%9e%e7%bf%bb%e8%ad%af%e3%80%91snow-man%e3%80%8c%e5%83%95%e3%81%ab%e5%a4%a7%e5%88%87%e3%81%ab%e3%81%95%e3%82%8c%e3%81%a6%e3%81%ad%e3%80%82%e3%80%8d/\" rel=\"bookmark\">【中文歌詞翻譯】Snow Man「僕に大切にされてね。」</a></h2>, <h2 class=\"entry-title\"><a href=\"https://minniejplyrics.wordpress.com/2022/06/22/%e3%80%90%e4%b8%ad%e6%96%87%e6%ad%8c%e8%a9%9e%e7%bf%bb%e8%ad%af%e3%80%91snow-man%e3%80%8c%e3%82%aa%e3%83%ac%e3%83%b3%e3%82%b8kiss%e3%80%8d/\" rel=\"bookmark\">【中文歌詞翻譯】Snow Man「オレンジkiss」</a></h2>, <h2 class=\"entry-title\"><a href=\"https://minniejplyrics.wordpress.com/2022/04/22/%e3%80%90%e4%b8%ad%e6%96%87%e6%ad%8c%e8%a9%9e%e7%bf%bb%e8%ad%af%e3%80%91snow-man%e3%80%8c%e3%83%96%e3%83%a9%e3%82%b6%e3%83%bc%e3%83%93%e3%83%bc%e3%83%88%e3%80%8d/\" rel=\"bookmark\">【中文歌詞翻譯】Snow Man「ブラザービート」</a></h2>, <h2 class=\"entry-title\"><a href=\"https://minniejplyrics.wordpress.com/2022/01/08/%e3%80%90%e4%b8%ad%e6%96%87%e6%ad%8c%e8%a9%9e%e7%bf%bb%e8%ad%af%e3%80%91snow-man%e3%80%8cd-d-%e3%80%8d/\" rel=\"bookmark\">【中文歌詞翻譯】Snow Man「D.D.」</a></h2>, <h2 class=\"entry-title\"><a href=\"https://minniejplyrics.wordpress.com/2021/12/12/%e3%80%90%e4%b8%ad%e6%96%87%e6%ad%8c%e8%a9%9e%e7%bf%bb%e8%ad%af%e3%80%91snow-man%e3%80%8cchristmas-wishes%e3%80%8d/\" rel=\"bookmark\">【中文歌詞翻譯】Snow Man「Christmas wishes」</a></h2>, <h2 class=\"entry-title\"><a href=\"https://minniejplyrics.wordpress.com/2021/12/04/%e3%80%90%e4%b8%ad%e6%96%87%e6%ad%8c%e8%a9%9e%e7%bf%bb%e8%ad%af%e3%80%91snow-man%e3%80%8chello-hello%e3%80%8d/\" rel=\"bookmark\">【中文歌詞翻譯】Snow Man「HELLO HELLO」</a></h2>, <h2 class=\"entry-title\"><a href=\"https://minniejplyrics.wordpress.com/2021/12/02/%e3%80%90%e4%b8%ad%e6%96%87%e6%ad%8c%e8%a9%9e%e7%bf%bb%e8%ad%af%e3%80%91snow-man%e3%80%8csecret-touch%e3%80%8d/\" rel=\"bookmark\">【中文歌詞翻譯】Snow Man「Secret Touch」</a></h2>]\n",
+      "['https://minniejplyrics.wordpress.com/2022/09/02/%e3%80%90%e4%b8%ad%e6%96%87%e6%ad%8c%e8%a9%9e%e7%bf%bb%e8%ad%af%e3%80%91snow-man%e3%80%8c%e3%83%9c%e3%82%af%e3%81%a8%e3%82%ad%e3%83%9f%e3%81%a8%e3%80%8d/', 'https://minniejplyrics.wordpress.com/2022/07/28/%e3%80%90%e4%b8%ad%e6%96%87%e6%ad%8c%e8%a9%9e%e7%bf%bb%e8%ad%af%e3%80%91snow-man%e3%80%8c%e5%83%95%e3%81%ab%e5%a4%a7%e5%88%87%e3%81%ab%e3%81%95%e3%82%8c%e3%81%a6%e3%81%ad%e3%80%82%e3%80%8d/', 'https://minniejplyrics.wordpress.com/2022/06/22/%e3%80%90%e4%b8%ad%e6%96%87%e6%ad%8c%e8%a9%9e%e7%bf%bb%e8%ad%af%e3%80%91snow-man%e3%80%8c%e3%82%aa%e3%83%ac%e3%83%b3%e3%82%b8kiss%e3%80%8d/', 'https://minniejplyrics.wordpress.com/2022/04/22/%e3%80%90%e4%b8%ad%e6%96%87%e6%ad%8c%e8%a9%9e%e7%bf%bb%e8%ad%af%e3%80%91snow-man%e3%80%8c%e3%83%96%e3%83%a9%e3%82%b6%e3%83%bc%e3%83%93%e3%83%bc%e3%83%88%e3%80%8d/', 'https://minniejplyrics.wordpress.com/2022/01/08/%e3%80%90%e4%b8%ad%e6%96%87%e6%ad%8c%e8%a9%9e%e7%bf%bb%e8%ad%af%e3%80%91snow-man%e3%80%8cd-d-%e3%80%8d/', 'https://minniejplyrics.wordpress.com/2021/12/12/%e3%80%90%e4%b8%ad%e6%96%87%e6%ad%8c%e8%a9%9e%e7%bf%bb%e8%ad%af%e3%80%91snow-man%e3%80%8cchristmas-wishes%e3%80%8d/', 'https://minniejplyrics.wordpress.com/2021/12/04/%e3%80%90%e4%b8%ad%e6%96%87%e6%ad%8c%e8%a9%9e%e7%bf%bb%e8%ad%af%e3%80%91snow-man%e3%80%8chello-hello%e3%80%8d/', 'https://minniejplyrics.wordpress.com/2021/12/02/%e3%80%90%e4%b8%ad%e6%96%87%e6%ad%8c%e8%a9%9e%e7%bf%bb%e8%ad%af%e3%80%91snow-man%e3%80%8csecret-touch%e3%80%8d/']\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[<h2 class=\"entry-title\"><a href=\"https://minniejplyrics.wordpress.com/2022/02/04/%e3%80%90%e4%b8%ad%e6%96%87%e6%ad%8c%e8%a9%9e%e7%bf%bb%e8%ad%af%e3%80%91seventeen%e3%80%8c%e3%81%82%e3%81%84%e3%81%ae%e3%81%a1%e3%81%8b%e3%82%89%e3%80%8d/\" rel=\"bookmark\">【中文歌詞翻譯】SEVENTEEN「あいのちから」</a></h2>]"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -332,63 +324,74 @@
     "    songs.append(re.findall(\"「[^\\x00-\\xff]+」|「[a-zA-Z .\\xa0]+」|「[^\\x00-\\xff]+[a-zA-Z .]+」\",song.a.string))\n",
     "    songs_link.append(song.a[\"href\"])\n",
     "print(songs)\n",
-    "songs_list\n",
+    "print(songs_list)\n",
+    "print(songs_link )\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "輸入歌名(前面有印出的喔)「あいのちから」\n"
+      "輸入歌名ボクとキミと\n"
      ]
     }
    ],
    "source": [
-    "song = input(\"輸入歌名(前面有印出的喔)\") \n"
+    "song =\"「\" + input(\"輸入歌名\") + \"」\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "「あいのちから」\n",
-      "['「あいのちから」']\n",
-      "「あいのちから」\n",
-      "https://minniejplyrics.wordpress.com/2022/02/04/%e3%80%90%e4%b8%ad%e6%96%87%e6%ad%8c%e8%a9%9e%e7%bf%bb%e8%ad%af%e3%80%91seventeen%e3%80%8c%e3%81%82%e3%81%84%e3%81%ae%e3%81%a1%e3%81%8b%e3%82%89%e3%80%8d/\n"
+     "ename": "NameError",
+     "evalue": "name 'songlink' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [40]\u001b[0m, in \u001b[0;36m<cell line: 6>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      4\u001b[0m         songlink \u001b[38;5;241m=\u001b[39m songs_link[s]\n\u001b[0;32m      5\u001b[0m     s \u001b[38;5;241m=\u001b[39m s \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[1;32m----> 6\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43msonglink\u001b[49m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'songlink' is not defined"
      ]
     }
    ],
    "source": [
-    "print(song)\n",
     "\n",
     "s = 0\n",
     "for i in songs:\n",
-    "    print(i)\n",
-    "    if i[s] == song:\n",
-    "        print(song)\n",
-    "        song_link = songs_link[s]\n",
+    "    if i == song:\n",
+    "        songlink = songs_link[s]\n",
     "    s = s + 1\n",
-    "print(song_link)"
+    "print(songlink)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'songlink' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [41]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m url \u001b[38;5;241m=\u001b[39m \u001b[43msonglink\u001b[49m\u001b[38;5;66;03m#find new url and updata\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m req\u001b[38;5;241m.\u001b[39murlopen(url) \u001b[38;5;28;01mas\u001b[39;00m response:\n\u001b[0;32m      3\u001b[0m     data \u001b[38;5;241m=\u001b[39m response\u001b[38;5;241m.\u001b[39mread()\u001b[38;5;241m.\u001b[39mdecode(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mutf-8\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'songlink' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "url = song_link#find new url and updata\n",
+    "url = songlink#find new url and updata\n",
     "with req.urlopen(url) as response:\n",
     "    data = response.read().decode(\"utf-8\")\n",
     "#print(data)"
@@ -396,14 +399,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "【中文歌詞翻譯】SEVENTEEN「あいのちから」 – 櫻色落日\n"
+      "なにわ男子 – 櫻色落日\n"
      ]
     }
    ],
@@ -423,50 +426,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<strong>「あいのちから」（愛的力量）</strong>,\n",
-       " <strong>これは白い雪が降っていた日の　僕たちの物語だ</strong>,\n",
-       " <strong>雪の上を通り過ぎた時間</strong>,\n",
-       " <strong>悲しみが溢れ</strong>,\n",
-       " <strong>堪えてたみたいだね</strong>,\n",
-       " <strong>僕もそうだ</strong>,\n",
-       " <strong>同じだったよ</strong>,\n",
-       " <strong>あなたの　寂しそうな</strong>,\n",
-       " <strong>声がしたら　手を伸ばすよ</strong>,\n",
-       " <strong>寒い冬が過ぎたら</strong>,\n",
-       " <strong>僕らは知るのでしょう</strong>,\n",
-       " <strong>凍えながらも　咲く心の温もりで</strong>,\n",
-       " <strong>僕らは　強くなる</strong>,\n",
-       " <strong>積もる　積もる　積もる心を集めて</strong>,\n",
-       " <strong>あいのちから</strong>,\n",
-       " <strong>言葉は刃のように</strong>,\n",
-       " <strong>また時には僕らを　救ってくれる</strong>,\n",
-       " <strong>悲しい声　聴こえたら</strong>,\n",
-       " <strong>すぐ手を差し伸べる</strong>,\n",
-       " <strong>あたたかい僕らになってみよう</strong>,\n",
-       " <strong>寒い冬が過ぎたら</strong>,\n",
-       " <strong>僕らは知るのでしょう</strong>,\n",
-       " <strong>凍えながらも　咲く心の温もりで</strong>,\n",
-       " <strong>僕らは　強くなる</strong>,\n",
-       " <strong>積もる　積もる　積もる心を集めて</strong>,\n",
-       " <strong>あいのちから</strong>,\n",
-       " <strong>踏み出すのがこわい世界だけれど　大丈夫だから</strong>,\n",
-       " <strong>今　手と手を繋ごう</strong>,\n",
-       " <strong>慰めあえば　また明日の太陽に会える</strong>,\n",
-       " <strong>また季節がめぐって</strong>,\n",
-       " <strong>僕らは知るのでしょう</strong>,\n",
-       " <strong>春風の中　咲く心の温もりで</strong>,\n",
-       " <strong>僕らは　強くなる</strong>,\n",
-       " <strong>積もる　積もる　積もる心を集めて</strong>,\n",
-       " <strong>あいのちから</strong>]"
+       "[]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +460,7 @@
        "bs4.element.ResultSet"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -509,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -536,7 +505,7 @@
        " 'Snow Man']"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -552,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -589,7 +558,7 @@
        "  ['「Secret Touch」']]}"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -614,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -623,7 +592,7 @@
        "dict"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -648,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -665,21 +634,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "(pd.DataFrame.from_dict(data=groups_dict, orient='index')\n",
-    "   .to_csv('Data.csv', header=0))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "(pd.DataFrame.from_dict(data=mydict, orient='index')\n",
+    "   .to_csv('dict_file.csv', header=False))"
+   ]
   }
  ],
  "metadata": {
